Expose RabbitMQ port by default

--- a/templates/compose/backend.yaml.erb
+++ b/templates/compose/backend.yaml.erb
@@ -22,6 +22,8 @@ services:
     restart: always
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    ports:
+      - "5672:5672"
     labels:
       traefik.enable: true
       traefik.frontend.rule: 'Host: rabbitmq.<%= @config['app']['domain'] %>'
