--- a/templates/compose/cryptonodes.yaml.erb
+++ b/templates/compose/cryptonodes.yaml.erb
@@ -1,26 +1,29 @@
 version: '3.6'
 
 services:
-  geth:
-    image: ethereum/client-go:stable
+  parity:
+    image: parity/parity:v2.5.8-stable
     restart: always
     command: |
-      --syncmode=full
-      --rinkeby
-      --rpc
-      --rpcaddr=0.0.0.0
-      --rpcport=8545
-      --port=30303
-      --rpcapi="db,personal,eth,net,web3"
-      --rpccorsdomain="*"
-      --rpcvhosts="*"
+      --chain=kovan
+      --mode=active
+      --interface=all
+      --warp=true
+      --snapshot-peers=10
+      --min-peers=5
+      --max-peers=10
+      --jsonrpc-interface=0.0.0.0
+      --jsonrpc-cors=all
+      --jsonrpc-hosts=all
+      --jsonrpc-apis=all
+      --db-compaction=ssd
     volumes:
-      - ../data/geth:/root/.ethereum/
+      - ../data/parity:/home/parity/.local/share/io.parity.ethereum
     expose:
-      - "8545"
+      - "8546"
       - "30303"
     ports:
-      - "8545:8545"
+      - "8546:8545"
     labels:
       traefik.enable: true
       traefik.frontend.rule: 'Host: eth.<%= @config['app']['domain'] %>'
