Feature: Add ability to add custom database configuration

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -8,9 +8,10 @@ RAILS_ENV=production
 
 SECRET_KEY_BASE=64
 
-DATABASE_HOST=db
-DATABASE_USER=root
-DATABASE_PASS=changeme
+DATABASE_HOST=<%= @config['database']['host'] %>
+DATABASE_PORT=<%= @config['database']['port'] %>
+DATABASE_USER=<%= @config['database']['user'] %>
+DATABASE_PASS=<%= @config['database']['password'] %>
 
 TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
 TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
