--- a/templates/config/peatio/seed/markets.yml.erb
+++ b/templates/config/peatio/seed/markets.yml.erb
@@ -1,3 +1,14 @@
+- id:                btcusd
+  base_unit:         btc
+  quote_unit:        usd
+  amount_precision:  5
+  price_precision:   2
+  min_price:         0.01
+  max_price:         1000.0
+  min_amount:        0.00001
+  position:          1
+  state:             enabled
+
 - id:                ethusd
   base_unit:         eth
   quote_unit:        usd
@@ -7,15 +18,4 @@
   max_price:         1000.0
   min_amount:        0.00001
   position:          2
-  state:             enabled
-
-- id:                fthusd
-  base_unit:         fth
-  quote_unit:        usd
-  amount_precision:  2
-  price_precision:   2
-  min_price:         0.01
-  max_price:         1000.0
-  min_amount:        0.01
-  position:          1
   state:             enabled
