--- a/templates/config/peatio/seed/currencies.yml.erb
+++ b/templates/config/peatio/seed/currencies.yml.erb
@@ -16,21 +16,22 @@
   position:               1
   options:                {}
 
-- id:                     fth
-  name:                   Fiat Ethereum
-  symbol:                 '₪'
-  type:                   fiat
-  precision:              2
-  base_factor:            1
+- id:                     btc
+  name:                   Bitcoin
+  blockchain_key:         btc-testnet
+  symbol:                 '฿'
+  type:                   coin
+  precision:              8
+  base_factor:            100_000_000
   visible:                true
   deposit_enabled:        true
   withdrawal_enabled:     true
   # Deposits with less amount are skipped during blockchain synchronization.
   # We advise to set value 10 times bigger than the network fee to prevent losses.
-  min_deposit_amount:     0.01
-  min_collection_amount:  0.01
-  withdraw_limit_24h:     100
-  withdraw_limit_72h:     200
+  min_deposit_amount:     0.0000356
+  min_collection_amount:  0.0000356
+  withdraw_limit_24h:     0.1
+  withdraw_limit_72h:     0.2
   deposit_fee:            0
   withdraw_fee:           0
   position:               2
@@ -62,36 +63,3 @@
     gas_limit: 21_000
     # Internal price that is paid for running a transaction on the Ethereum network.
     gas_price: 1_000_000_000
-
-- id:                     trst
-  name:                   WeTrust
-  blockchain_key:         eth-kovan
-  symbol:                 'Ξ'
-  type:                   coin
-  precision:              8
-  base_factor:            1_000_000 # IMPORTANT: Don't forget to update this variable according
-                                    # to your ERC20-based currency requirements
-                                    # (usually can be found on the official website).
-  visible:                true
-  deposit_enabled:        true
-  withdrawal_enabled:     true
-  # Deposits with less amount are skipped during blockchain synchronization.
-  # We advise to set value 10 times bigger than the network fee to prevent losses.
-  # NOTE: Network fee is paid in ETH but min_deposit_amount is in TRST.
-  min_deposit_amount:     2
-  min_collection_amount:  2
-  withdraw_limit_24h:     300      #            (usually can be found on the official website).
-  withdraw_limit_72h:     600
-  deposit_fee:            0
-  withdraw_fee:           0
-  position:               4
-  options:
-    # ERC20 tx fees configurations.
-    #
-    # Maximum amount of gas you're willing to spend on a particular transaction.
-    gas_limit: 90_000
-    # Internal price that is paid for running a contract on the Ethereum network.
-    gas_price: 1_000_000_000
-    #
-    # ERC20 configuration.
-    erc20_contract_address: '0x87099add3bcc0821b5b151307c147215f839a110' # Always wrap this value in quotes!
