Feature: Update Barong 2.3.35 config
- Add ability to customize SMS verification content
- Use Twilio as the phone verification service by default
- Add ability to configure S3-compatible storage providers for Barong

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -13,14 +13,21 @@ DATABASE_PORT=<%= @config['database']['port'] %>
 DATABASE_USER=<%= @config['database']['user'] %>
 DATABASE_PASS=<%= @config['database']['password'] %>
 
-TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
-TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
-TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
+BARONG_TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
+BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
+BARONG_TWILIO_SERVICE_SID=changeme
+BARONG_TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
+BARONG_PHONE_VERIFICATION=twilio_sms
+
+BARONG_SMS_CONTENT_TEMPLATE=<%= @config['app']['smsContent'] %>
 
 STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
 STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
 STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
+STORAGE_ENDPOINT=<%= @config['storage']['endpoint'] %>
+STORAGE_SIGNATURE_VERSION=<%= @config['storage']['signatureVersion'] %>
+STORAGE_REGION=<%= @config['storage']['region'] %>
 
 RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
 RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
