--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -13,7 +13,7 @@ DATABASE_USER=root
 DATABASE_PASS=changeme
 
 VAULT_URL=http://vault:8200
-VAULT_TOKEN=changeme
+VAULT_TOKEN=<%= @config['vault']['token'] %>
 
 REDIS_URL=redis://redis:6379
 
