--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -37,6 +37,7 @@ JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 
 VAULT_TOKEN=<%= @config['vault']['token'] %>
 VAULT_ADDRESS=http://vault:8200
+VAULT_TOKEN=<%= @config['vault']['token'] %>
 
 EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
 EVENT_API_JWT_ALGORITHM=RS256
