Feature: Add Parity and bitcoind installation scripts

--- a/templates/packer/parity/image.json.erb
+++ b/templates/packer/parity/image.json.erb
@@ -15,7 +15,7 @@
     {
       "type": "shell",
       "execute_command": "chmod +x {{ .Path }}; sudo {{ .Vars }} {{ .Path }}",
-      "script": "packer/install-parity.sh"
+      "script": "packer/parity/install-parity.sh"
     }
   ],
   "builders": [
