--- a/templates/compose/arke.yaml.erb
+++ b/templates/compose/arke.yaml.erb
@@ -7,3 +7,13 @@ services:
       - ../config/arke:/home/app/config
     command: ./bin/arke start
 
+  services:
+  arke-recorder:
+    image: "<%= @utils['images']['arke'] %>"
+    env_file:
+      - ../config/arke.env
+    volumes:
+      - ../config/arke:/home/app/config
+    command: ./bin/arke recorder start
+
+
