Rinkeby changed to Kovan

--- a/templates/config/peatio/seed/currencies.yml.erb
+++ b/templates/config/peatio/seed/currencies.yml.erb
@@ -38,7 +38,7 @@
 
 - id:                     eth
   name:                   Ethereum
-  blockchain_key:         eth-rinkeby
+  blockchain_key:         eth-kovan
   symbol:                 'Ξ'
   type:                   coin
   precision:              8
@@ -65,7 +65,7 @@
 
 - id:                     trst
   name:                   WeTrust
-  blockchain_key:         eth-rinkeby
+  blockchain_key:         eth-kovan
   symbol:                 'Ξ'
   type:                   coin
   precision:              8
