--- a/templates/config/peatio/seed/blockchains.yml.erb
+++ b/templates/config/peatio/seed/blockchains.yml.erb
@@ -1,12 +1,12 @@
-- key:               eth-rinkeby
-  name:              Ethereum Rinkeby
+- key:               eth-kovan
+  name:              Ethereum Kovan
   client:            parity                   # API client name.
   server:            http://parity:8545       # Public Ethereum node endpoint. IMPORTANT: full syncmode.
   height:            4000000                # Initial block number from which sync will be started.
   min_confirmations: 6                      # Minimal confirmations needed for withdraw and deposit confirmation.
   explorer:
-    address:         https://rinkeby.etherscan.io/address/#{address}
-    transaction:     https://rinkeby.etherscan.io/tx/#{txid}
+    address:         https://kovan.etherscan.io/address/#{address}
+    transaction:     https://kovan.etherscan.io/tx/#{txid}
   status:            active
 
 - key:               eth-mainet
