--- a/templates/compose/proxy.yaml.erb
+++ b/templates/compose/proxy.yaml.erb
@@ -10,6 +10,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ../config/traefik.toml:/etc/traefik/traefik.toml:ro
       - ../config/acme.json:/acme.json
+    networks:
+      - default
     labels:
       traefik.enable: true
       traefik.frontend.rule: 'Host: monitor.<%= @config['app']['domain'] %>'
