Enhancement: Delete port-forward from compose files (#34)

--- a/templates/compose/proxy.yaml.erb
+++ b/templates/compose/proxy.yaml.erb
@@ -11,15 +11,7 @@ services:
       - ../config/traefik.toml:/etc/traefik/traefik.toml:ro
       - ../config/acme.json:/acme.json
     networks:
-      default:
-        aliases:
-          - <%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
-          - peatio.<%= @config['app']['domain'] %>
-          - ws.ranger.<%= @config['app']['domain'] %>
-          - superset.<%= @config['app']['domain'] %>
-          - eth.<%= @config['app']['domain'] %>
-          - tower.<%= @config['app']['domain'] %>
-          - monitor.<%= @config['app']['domain'] %>
+      - default
     labels:
       traefik.enable: true
       traefik.frontend.rule: 'Host: monitor.<%= @config['app']['domain'] %>'
