--- a/templates/compose/frontend.yaml.erb
+++ b/templates/compose/frontend.yaml.erb
@@ -2,6 +2,7 @@ version: '3.6'
 
 services:
   frontend:
+    restart: always
     image: "<%= @config['images']['frontend'] %>"
     volumes:
       - ../config/frontend/env.js:/usr/share/nginx/html/config/env.js
@@ -11,6 +12,7 @@ services:
       traefik.port: 3000
 
   tower:
+    restart: always
     image: "<%= @config['images']['tower'] %>"
     volumes:
       - ../config/frontend/tower.js:/home/app/env.js
