--- a/templates/compose/vendor.yaml.erb
+++ b/templates/compose/vendor.yaml.erb
@@ -3,6 +3,7 @@ version: '3.6'
 services:
   frontend:
     image: node:11
+    restart: always
     user: "${UID}:${GID}"
     volumes:
       - ../vendor/frontend:/home/node
