Change the default peatio log level to warn

--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -4,7 +4,7 @@ RAILS_ROOT=/home/app
 PORT=8000
 URL_HOST=<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
 
-LOG_LEVEL=debug
+LOG_LEVEL=warn
 
 ADMIN=admin@barong.io
 
