--- a/templates/compose/backend.yaml.erb
+++ b/templates/compose/backend.yaml.erb
@@ -10,6 +10,17 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: changeme
 
+  influxdb:
+    image: influxdb:1.7.8
+    restart: always
+    volumes:
+      - influx_data:/var/lib/influxdb
+      - ../config/influxdb/build_candles.sql:/build_candles.sql
+      - ../config/influxdb/influxdb.sql:/influxdb.sql
+      - ../config/arke/historical_data:/data/historical_data
+    environment:
+       INFLUXDB_ADMIN_ENABLED: "true"
+
   redis:
     image: redis:4.0.10
     restart: always
@@ -52,3 +63,4 @@ volumes:
   rabbitmq_data:
   redis_data:
   vault_data:
+  influx_data:
