Feature: Remove all license-related configs

--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -5,7 +5,7 @@ window.env = {
       applogicUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic',
       rangerUrl: '<%= ssl_helper('ws') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger',
       arkeUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/arke',
-      tenkoUrl: '<%= @config['license']['url'] %>',
+      tenkoUrl: 'https://www.openware.com/api/v2/tenko',
     },
     minutesUntilAutoLogout: '35',
     withCredentials: false,
@@ -15,5 +15,5 @@ window.env = {
     },
     rangerReconnectPeriod: '1',
     msAlertDisplayTime: '5000',
-    licenseKey: '<%= @config['license']['key'] %>',
+    licenseKey: 'LICENSE-KEY',
 };
