--- a/templates/compose/cryptonodes.yaml.erb
+++ b/templates/compose/cryptonodes.yaml.erb
@@ -19,6 +19,8 @@ services:
       --db-compaction=ssd
     volumes:
       - ../data/parity:/home/parity/.local/share/io.parity.ethereum
+    ports:
+      - "127.0.0.1:8545:8545"
     labels:
       traefik.enable: true
       traefik.frontend.rule: 'Host: eth.<%= @config['app']['domain'] %>'
