--- a/templates/terraform/terraform.tfvars.erb
+++ b/templates/terraform/terraform.tfvars.erb
@@ -3,7 +3,7 @@ git_key = "<%= @config['terraform']['git_key'] %>"
 project = "<%= @config['terraform']['project'] %>"
 region = "<%= @config['terraform']['region'] %>"
 zone = "<%= @config['terraform']['zone'] %>"
-ssh_user = "app"
+ssh_user = "deploy"
 ssh_public_key = "../config/secrets/app.key.pub"
 ssh_private_key = "../config/secrets/app.key"
 instance_name = "<%= @config['terraform']['instance_name'] %>"
