Feature: Final 2.3 stable update

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -30,6 +30,8 @@ JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 VAULT_TOKEN=<%= @config['vault']['token'] %>
 VAULT_ADDRESS=http://vault:8200
 
+REDIS_URL=redis://redis:6379
+
 EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
 EVENT_API_JWT_ALGORITHM=RS256
 EVENT_API_RABBITMQ_HOST=rabbitmq
