Enhancement: Update Barong configs to v2.4

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -12,32 +12,32 @@ DATABASE_HOST=db
 DATABASE_USER=root
 DATABASE_PASS=changeme
 
-TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
-TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
-TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
+BARONG_TWILIO_PHONE_NUMBER=<%= @config['twilio']['phone_number'] %>
+BARONG_TWILIO_ACCOUNT_SID=<%= @config['twilio']['account_sid'] %>
+BARONG_TWILIO_AUTH_TOKEN=<%= @config['twilio']['auth_token'] %>
 
-STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
-STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
-STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
-STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
+BARONG_STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
+BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
+BARONG_STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
+BARONG_STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
 
-RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
-RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
+BARONG_RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
+BARONG_RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
 
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
 JWT_PRIVATE_KEY_PATH=/secrets/barong.key
 
-VAULT_TOKEN=<%= @config['vault']['token'] %>
-VAULT_ADDRESS=http://vault:8200
+BARONG_VAULT_TOKEN=<%= @config['vault']['token'] %>
+BARONG_VAULT_ADDRESS=http://vault:8200
 
-REDIS_URL=redis://redis:6379
+BARONG_REDIS_URL=redis://redis:6379
 
 EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
 EVENT_API_JWT_ALGORITHM=RS256
-EVENT_API_RABBITMQ_HOST=rabbitmq
-EVENT_API_RABBITMQ_PORT=5672
-EVENT_API_RABBITMQ_USERNAME=guest
-EVENT_API_RABBITMQ_PASSWORD=guest
+BARONG_EVENT_API_RABBITMQ_HOST=rabbitmq
+BARONG_EVENT_API_RABBITMQ_PORT=5672
+BARONG_EVENT_API_RABBITMQ_USERNAME=guest
+BARONG_EVENT_API_RABBITMQ_PASSWORD=guest
 
-APP_NAME=<%= @config['app']['name'] %>
+BARONG_APP_NAME=<%= @config['app']['name'] %>
 BARONG_DOMAIN=<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
