--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -2,6 +2,7 @@ window.env = {
     api: {
       authUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/barong',
       tradeUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/peatio',
+      finexUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/finex',
       applogicUrl: '<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/applogic',
       rangerUrl: '<%= ssl_helper('ws') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>/api/v2/ranger',
       <%- if @config['arke_proxy']['enabled'] -%>
@@ -15,7 +16,12 @@ window.env = {
         captchaType: '<%= @config['captcha']['type'] %>',
         siteKey: '<%= @config['captcha']['siteKey'] %>',
     },
+    finex: <%= config['finex']['enabled'] %>,
+    gaTrackerKey: '<%= @config['gaTrackerKey'] %>',
     rangerReconnectPeriod: '1',
     msAlertDisplayTime: '5000',
-    licenseKey: 'LICENSE-KEY',
+    incrementalOrderBook: true,
+    isResizable: false,
+    isDraggable: false,
+    languages: ['en', 'ru'],
 };
