--- a/templates/compose/app.yaml.erb
+++ b/templates/compose/app.yaml.erb
@@ -27,13 +27,21 @@ services:
       - ../config/barong/authz_rules.yml:/home/app/config/authz_rules.yml
       - ../config/barong/management_api.yml:/home/app/config/management_api.yml
 
-  arke:
-    image: "<%= @utils['images']['arke'] %>"
-    env_file:
-      - ../config/arke.env
-    expose:
-      - "8081"
-    command: bash -c "bundle exec puma --config config/puma.rb"
+<% if @config['finex']['enabled'] %>
+  finex-api:
+    restart: always
+    image: "<%= @config['finex']['image'] %>"
+    command: "./orderapi"
+    volumes:
+      - ../config/finex:/app/config:ro
+
+  finex-engine:
+    restart: always
+    image: "<%= @config['finex']['image'] %>"
+    command: "./finex"
+    volumes:
+      - ../config/finex:/app/config:ro
+<% end %>
 
   applogic:
     restart: always
