Enhancement: Update captcha configs; Enable support for Geetest
* Add ability to configure CAPTCHA-protected endpoints

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -21,8 +21,14 @@ BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 BARONG_STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
 BARONG_STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
 
-BARONG_RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
-BARONG_RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
+BARONG_CAPTCHA=<%= @config['captcha']['type'] %>
+<% if @config['captcha']['type'] == 'recaptcha' %>
+BARONG_RECAPTCHA_SITE_KEY=<%= @config['captcha']['siteKey'] %>
+BARONG_RECAPTCHA_SECRET_KEY=<%= @config['captcha']['secretKey'] %>
+<% elsif @config['captcha']['type'] == 'geetest' %>
+BARONG_GEETEST_ID=<%= @config['captcha']['siteKey'] %>
+BARONG_GEETEST_KEY=<%= @config['captcha']['secretKey'] %>
+<% end %>
 
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
 JWT_PRIVATE_KEY_PATH=/secrets/barong.key
