--- a/templates/config/frontend/env.js.erb
+++ b/templates/config/frontend/env.js.erb
@@ -12,8 +12,8 @@ window.env = {
     minutesUntilAutoLogout: '35',
     withCredentials: false,
     captcha: {
-        captchaType: '<%= @config['recaptcha']['type'] %>',
-        siteKey: '<%= @config['recaptcha']['siteKey'] %>',
+        captchaType: '<%= @config['captcha']['type'] %>',
+        siteKey: '<%= @config['captcha']['siteKey'] %>',
     },
     rangerReconnectPeriod: '1',
     msAlertDisplayTime: '5000',
