--- a/templates/config/frontend/tower.js.erb
+++ b/templates/config/frontend/tower.js.erb
@@ -6,8 +6,8 @@ window.env = {
     tablePageLimit: 50,
     minutesUntilAutoLogout: '35',
     captcha: {
-        captchaType: '<%= @config['recaptcha']['type'] %>',
-        siteKey: '<%= @config['recaptcha']['siteKey'] %>',
+        captchaType: '<%= @config['captcha']['type'] %>',
+        siteKey: '<%= @config['captcha']['siteKey'] %>',
     },
     labelSwitcher: [
         { name: 'email', label: [{ email: 'verified' }] },
