--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -29,6 +29,8 @@ MANAGEMENT_API_V1_CONFIG=/opt/peatio/config/management_api_v1.yml
 JWT_AUDIENCE=peatio,barong
 JWT_PUBLIC_KEY=<%= @barong_public_key %>
 
+INFLUXDB_HOST=influxdb
+
 EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
 EVENT_API_JWT_ALGORITHM=RS256
 EVENT_API_RABBITMQ_HOST=rabbitmq
