--- a/templates/config/peatio.env.erb
+++ b/templates/config/peatio.env.erb
@@ -8,9 +8,10 @@ LOG_LEVEL=warn
 
 ADMIN=admin@barong.io
 
-DATABASE_HOST=db
-DATABASE_USER=root
-DATABASE_PASS=changeme
+DATABASE_HOST=<%= @config['database']['host'] %>
+DATABASE_PORT=<%= @config['database']['port'] %>
+DATABASE_USER=<%= @config['database']['user'] %>
+DATABASE_PASS=<%= @config['database']['password'] %>
 
 VAULT_URL=http://vault:8200
 VAULT_TOKEN=<%= @config['vault']['token'] %>
