--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -21,6 +21,9 @@ STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
 STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
 STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
+STORAGE_ENDPOINT=<%= @config['storage']['endpoint'] %>
+STORAGE_SIGNATURE_VERSION=<%= @config['storage']['signatureVersion'] %>
+STORAGE_REGION=<%= @config['storage']['region'] %>
 
 RECAPTCHA_SECRET_KEY=<%= @config['recaptcha']['siteKey'] %>
 RECAPTCHA_SITE_KEY=<%= @config['recaptcha']['secretKey'] %>
