Feature: Add support for S3-compatible storage providers

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -21,6 +21,9 @@ BARONG_STORAGE_PROVIDER=<%= @config['storage']['provider'] %>
 BARONG_STORAGE_BUCKET_NAME=<%= @config['storage']['bucketName'] %>
 BARONG_STORAGE_ACCESS_KEY=<%= @config['storage']['accessKey'] %>
 BARONG_STORAGE_SECRET_KEY=<%= @config['storage']['secretKey'] %>
+BARONG_STORAGE_ENDPOINT=<%= @config['storage']['endpoint'] %>
+BARONG_STORAGE_SIGNATURE_VERSION=<%= @config['storage']['signatureVersion'] %>
+BARONG_STORAGE_REGION=<%= @config['storage']['region'] %>
 
 BARONG_CAPTCHA=<%= @config['captcha']['type'] %>
 <% if @config['captcha']['type'] == 'recaptcha' %>
